--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -83,18 +83,20 @@
 	$(document).ready(function() {
 		$('a.message_archiver').on('click', function() {
 			$(this).html('<i class="fa fa-spinner fa-spin fa-fw"></i>');
-			var url = $(this).attr('href')
+			var url = $(this).attr('href');
 			var target = $(this).closest('div.panel-default');
 			
 			$.get(url).done(function(data) {
 
-				
 				$(target).hide('slow', function(){ $(target).remove(); });
 				
 				new PNotify({
         		    title: 'Message archivé',
         		    text: 'Votre message est archivé',
         		    type: 'success',
+        		    delay: 2000,
+        		    addclass: "stack-bottomleft",
+        	        stack: stack_bottomleft
         		});
 			});
 			return false;
