--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -22,7 +22,7 @@
 				<ul class="dropdown-menu">
 					{%  if app.user %}			
 						<li><a href="{{ path('user') }}">Mon compte</a></li>
-						<li><a href="{{ path('user.messagerie') }}">Ma messagerie</a></li>
+						<li><a href="{{ path('messagerie') }}">Ma messagerie</a></li>
 						<li><a href="{{ path('forum') }}">Forum</a></li>
 						<li><a href="{{ path('user.logout') }}">Déconnection</a></li>
 					{%  else %}
