Envoyer des coeurs et quelques corrections.

--- a/src/LarpManager/Views/admin/user/update.twig
+++ b/src/LarpManager/Views/admin/user/update.twig
@@ -10,7 +10,7 @@
     
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li><a href="{{ path('user.admin.list') }}">Liste des utilisateurs</a></li>
+		{% if is_granted('ROLE_ADMIN', app.user) %}<li><a href="{{ path('user.admin.list') }}">Liste des utilisateurs</a></li>{% endif %}
 		<li class="active">Modifier l'utilisateur : {{ user.displayName }}</li>
 	</ol>
 	
