--- a/src/LarpManager/Views/admin/groupe/description.twig
+++ b/src/LarpManager/Views/admin/groupe/description.twig
@@ -8,11 +8,11 @@
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li><a href="{{ path("groupe.admin.list") }}">Liste des groupes</a></li>
 		<li><a href="{{ path("groupe.detail", {'index': groupe.id}) }}">{{ groupe.nom }}</a></li>
-		<li class="active">Choisir le scenariste</li>
+		<li class="active">Description</li>
 	</ol>
 	
 	<div class="well well-sm">
-		<form action="{{ path('groupe.description',{'groupe': groupe.id}) }}" method="POST">
+		<form action="{{ path('groupe.description',{'groupe': groupe.id}) }}" method="POST" {{ form_enctype(form) }} novalidate>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 			{{ form(form) }}			
 			
