Voir tous les groupes réservés pour une session de jeu.

--- a/src/LarpManager/Views/public/gn/billetterie.twig
+++ b/src/LarpManager/Views/public/gn/billetterie.twig
@@ -23,6 +23,7 @@
 	
 	<div class="row">
 		<div class="col-md-7">
+			En cas de problème d'affichage, utilisez <a href="https://www.helloasso.com/associations/eve-oniris/evenements/legendes-d-hyboree-3">le lien suivant</a>.
 			{{ gn.billetterie|raw }}
 		</div>
 		<div class="col-md-5">
