--- a/src/LarpManager/Views/personnage/potion.twig
+++ b/src/LarpManager/Views/personnage/potion.twig
@@ -8,12 +8,13 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-		<li><a href="{{ path('personnage')  }}">Votre personnage</a></li>
+		<li><a href="{{ path('participant.index', {'participant' : participant.id}) }}">{{ participant.gn.label }}</a></li>
+		<li><a href="{{ path('participant.personnage', {'participant': participant.id})  }}">{{ personnage.nom }} {{ personnage.surnom }}</a></li>
 		<li class="active">Choix d'une nouvelle potion</li>
 	</ol>
 	
 	<div class="well bs-component">
-	<form action="{{ path('personnage.magie.potion',{'personnage':personnage.id, 'niveau': niveau}) }}" method="POST" {{ form_enctype(form) }}>
+	<form action="{{ path('participant.personnage.potion',{'participant': participant.id, 'niveau': niveau}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
 			<blockquote>Votre compétence vous permet de choisir une nouvelle potion. Le descriptif des potions disponibles est visible en bas de page.</blockquote>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
