--- a/src/LarpManager/Views/public/personnage/fragment/alchimie.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/alchimie.twig
@@ -6,28 +6,28 @@
 	{% if personnage.hasTrigger('ALCHIMIE APPRENTI') %}
 		<blockquote>
 			<p>Votre compétence Alchimie vous permet de choisir une potion de niveau apprenti.</p>
-			<a href="{{ path('personnage.magie.potion', {'personnage': personnage.id, 'niveau' : 1}) }}">Choisir une nouvelle potion</a>
+			<a href="{{ path('participant.personnage.potion', {'niveau' : 1, 'participant' : participant.id}) }}">Choisir une nouvelle potion</a>
 		</blockquote>
 	{% endif %}
 	
 	{% if personnage.hasTrigger('ALCHIMIE INITIE') %}
 		<blockquote>
 			<p>Votre compétence Alchimie vous permet de choisir une potion de niveau initié.</p>
-			<a href="{{ path('personnage.magie.potion', {'personnage': personnage.id, 'niveau' : 2}) }}">Choisir une nouvelle potion</a>
+			<a href="{{ path('participant.personnage.potion', {'niveau' : 2, 'participant' : participant.id}) }}">Choisir une nouvelle potion</a>
 		</blockquote>
 	{% endif %}
 	
 	{% if personnage.hasTrigger('ALCHIMIE EXPERT') %}
 		<blockquote>
 			<p>Votre compétence Alchimie vous permet de choisir une potion de niveau expert.</p>
-			<a href="{{ path('personnage.magie.potion', {'personnage': personnage.id, 'niveau' : 3}) }}">Choisir une nouvelle potion</a>
+			<a href="{{ path('participant.personnage.potion', {'niveau' : 3, 'participant' : participant.id}) }}">Choisir une nouvelle potion</a>
 		</blockquote>
 	{% endif %}
 	
 	{% if personnage.hasTrigger('ALCHIMIE MAITRE') %}
 		<blockquote>
 			<p>Votre compétence Alchimie vous permet de choisir une potion de niveau maitre.</p>
-			<a href="{{ path('personnage.magie.potion', {'personnage': personnage.id, 'niveau' : 4}) }}">Choisir une nouvelle potion</a>
+			<a href="{{ path('participant.personnage.potion', {'niveau' : 4, 'participant' : participant.id}) }}">Choisir une nouvelle potion</a>
 		</blockquote>
 	{% endif %}
 	
