--- a/src/LarpManager/Views/personnage/domaineMagie.twig
+++ b/src/LarpManager/Views/personnage/domaineMagie.twig
@@ -8,17 +8,18 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-		<li><a href="{{ path('personnage')  }}">Votre personnage</a></li>
-		<li class="active">Choix du domaine de magie</li>
+		<li><a href="{{ path('participant.index', {'participant' : participant.id}) }}">{{ participant.gn.label }}</a></li>
+		<li><a href="{{ path('participant.personnage', {'participant': participant.id})  }}">{{ personnage.nom }} {{ personnage.surnom }}</a></li>
+		<li class="active">Choix d'un domaine de magie</li>
 	</ol>
 	
 	<div class="well bs-component">
-	<form action="{{ path('personnage.magie.domaine',{'personnage':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
+	<form action="{{ path('participant.personnage.domaine',{'participant':participant.id}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
 			<blockquote>Votre compétence vous permet de choisir un domaine de magie.</blockquote>
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 			
-			{{ form_row(form.domaines) }}
+			{{ form_row(form.domaine) }}
 			{{ form_rest(form) }}
 		</fieldset>
 	</form>
