--- a/src/LarpManager/Views/personnage/sort.twig
+++ b/src/LarpManager/Views/personnage/sort.twig
@@ -8,12 +8,13 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage')  }}">Accueil</a></li>
-		<li><a href="{{ path('personnage')  }}">Votre personnage</a></li>
+		<li><a href="{{ path('participant.index', {'participant' : participant.id}) }}">{{ participant.gn.label }}</a></li>
+		<li><a href="{{ path('participant.personnage', {'participant': participant.id})  }}">{{ personnage.nom }} {{ personnage.surnom }}</a></li>
 		<li class="active">Choix d'un nouveau sortilège</li>
 	</ol>
 	
 	<div class="well bs-component">
-	<form action="{{ path('personnage.magie.sort',{'personnage':personnage.id, 'niveau': niveau}) }}" method="POST" {{ form_enctype(form) }}>
+	<form action="{{ path('participant.personnage.sort',{'participant':participant.id, 'niveau': niveau}) }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
 			<blockquote>Votre compétence vous permet de choisir un nouveau sortilège.</blockquote>
 			<blockquote>Attention ! Un sortilège dans un domaine que vous ne maitrisez pas necessitera plus mana pour le lancer (la description complète des sortilèges est disponible en bas de cette page)</blockquote>
