--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -49,6 +49,21 @@
 							{% if trigger.tag == 'ALCHIMIE MAITRE' %}
 								<li class="list-group-item"><a href="{{ path('participant.personnage.potion', {'niveau' : 4, 'participant' : participant.id}) }}">Choisir une nouvelle potion de niveau maitre</a></li>
 							{% endif %}
+							{% if trigger.tag == 'DOMAINE MAGIE' %}
+								<li class="list-group-item"><a href="{{ path('participant.personnage.domaine', {'participant': participant.id}) }}">Choisir un domaine de magie</a></li>
+							{% endif %}							
+							{% if trigger.tag == 'SORT APPRENTI' %}
+								<li class="list-group-item"><a href="{{ path('participant.personnage.sort', {'participant': participant.id, 'niveau' : 1}) }}">Choisir un sortilège de niveau Apprenti</a></li>
+							{% endif %}
+							{% if trigger.tag == 'SORT INITIE' %}
+								<li class="list-group-item"><a href="{{ path('participant.personnage.sort', {'participant': participant.id, 'niveau' : 2}) }}">Choisir un sortilège de niveau Initié</a></li>
+							{% endif %}
+							{% if trigger.tag == 'SORT EXPERT' %}
+								<li class="list-group-item"><a href="{{ path('participant.personnage.sort', {'participant': participant.id, 'niveau' : 3}) }}">Choisir un sortilège de niveau Expert</a></li>
+							{% endif %}
+							{% if trigger.tag == 'SORT MAITRE' %}
+								<li class="list-group-item"><a href="{{ path('participant.personnage.sort', {'participant': participant.id, 'niveau' : 4}) }}">Choisir un sortilège de niveau Maitre</a></li>
+							{% endif %}
 						{% endfor %}	
 						</ul>
 					{% endif %}
