--- a/src/LarpManager/Views/public/user/detail.twig
+++ b/src/LarpManager/Views/public/user/detail.twig
@@ -66,7 +66,7 @@
 			        			{% if is_granted('ROLE_ORGA', app.user) %}
 			        				<a href="{{ path('groupe.detail',{'index':participant.groupeGn.groupe.id})  }}">{{ participant.groupeGn.groupe.nom }}</a>
 			        			{% else %}
-			        				<a href="{{ path('groupGn.groupe',{'groupeGn':participant.groupeGn.id})  }}">{{ participant.groupeGn.groupe.nom }}</a>
+			        				<a href="{{ path('groupeGn.groupe',{'groupeGn':participant.groupeGn.id})  }}">{{ participant.groupeGn.groupe.nom }}</a>
 			        			{% endif %}
 			        		</div>
 			        	{% endif %}
