--- a/src/LarpManager/Views/stock/tag/update.twig
+++ b/src/LarpManager/Views/stock/tag/update.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="well well-sm">
 	<div class="page-header">
 		<h1>Modification d'un tag</h1>
 	</div>
@@ -13,5 +14,5 @@
 			</div>
 		</div>
 	</div>
-	
+</div>
 {%  endblock %}
