--- a/src/LarpManager/Views/stock/etat/index.twig
+++ b/src/LarpManager/Views/stock/etat/index.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Liste des états</h1>
 	</div>
@@ -26,4 +28,5 @@
 	
 	{{ include("stock/etat/list.twig", {'etats' : etats}) }}
 	
+</div>
 {% endblock %}
