--- a/src/LarpManager/Views/stock/localisation/add.twig
+++ b/src/LarpManager/Views/stock/localisation/add.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Ajout d'une localisation</h1>
 	</div>
@@ -13,5 +15,7 @@
 			</div>
 		</div>
 	</div>
+
+</div>
 
 {% endblock %}
