--- a/src/LarpManager/Views/stock/objet/clone.twig
+++ b/src/LarpManager/Views/stock/objet/clone.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Clonage d'un objet</h1>
 	</div>
@@ -16,5 +18,6 @@
 			</div>
 		</div>
 	</div>
-	
+
+</div>	
 {% endblock content %}
