--- a/src/LarpManager/Views/stock/objet/detail.twig
+++ b/src/LarpManager/Views/stock/objet/detail.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Détail de {{ objet.code }} - {{ objet.nom }} <a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-primary" role="button">Modifier</a> <a href="{{ path('stock_objet_clone', {index: objet.id}) }}" class="btn btn-primary" role="button">Cloner</a></h1>		
 	</div>
@@ -75,5 +77,7 @@
 			</div>
 		</div>
 	</div>		
+	
+</div>
 
 {% endblock %}
