--- a/src/LarpManager/Views/stock/objet/index.twig
+++ b/src/LarpManager/Views/stock/objet/index.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 	<h1>
 		Liste des objets
@@ -57,6 +59,7 @@
   		{% endfor %}
   	</div>
 			
+</div>
 {% endblock content %}
 
 
