--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>{{ titre }}</h1>
 	</div>
@@ -28,4 +30,5 @@
 		</div>
 	</div>
 	
+</div>
 {% endblock content %}
