--- a/src/LarpManager/Views/stock/proprietaire/index.twig
+++ b/src/LarpManager/Views/stock/proprietaire/index.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Liste des propriétaires</h1>
 	</div>
@@ -25,5 +27,7 @@
 	{% endif %}
 
 {{ include("stock/proprietaire/list.twig", {'proprietaires' : proprietaires}) }}
+
+</div>
 	
 {% endblock %}
