--- a/src/LarpManager/Views/stock/rangement/index.twig
+++ b/src/LarpManager/Views/stock/rangement/index.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Liste des rangements</h1>
 	</div>
@@ -25,5 +27,6 @@
 	{% endif %}
 	
 	{{ include("stock/rangement/list.twig", {'rangements' : rangements}) }}
-	
+
+</div>	
 {% endblock %}
