--- a/src/LarpManager/Views/stock/tag/add.twig
+++ b/src/LarpManager/Views/stock/tag/add.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Ajout d'un tag</h1>
 	</div>
@@ -14,4 +16,5 @@
 		</div>
 	</div>
 
+</div>
 {% endblock %}
