--- a/src/LarpManager/Views/stock/tag/index.twig
+++ b/src/LarpManager/Views/stock/tag/index.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="well well-sm">
+
 	<div class="page-header">
 		<h1>Liste des tags</h1>
 	</div>
@@ -26,4 +28,5 @@
 
 	{{ include("stock/tag/list.twig", {'tags' : tags}) }}
 	
+</div>
 {% endblock %}
